# commons-daemon

./: .asf.yaml  .gitattributes  .gitignore  .travis.yml  CONTRIBUTING.md  HOWTO-RELEASE.txt  KEYS  LICENSE  NOTICE.txt  PROPOSAL.html  README  README.md  RELEASE-NOTES.txt  STATUS.html  build-maven.xml  build.properties.sample  build.xml  doap_daemon.rdf  fb-excludes.xml  maven.xml  pom.xml  project.properties  project.xml
.github/workflows/: codeql-analysis-cpp.yml  codeql-analysis-java.yml  codeql-analysis.yml  coverage.yml  maven.yml  scorecards-analysis.yml  windows.yml
COMMONS_DAEMON_1_0_3_RC2/: NOTICE.txt  build.xml  pom.xml
COMMONS_DAEMON_1_0_3_RC2/src/docs/: daemon.html
COMMONS_DAEMON_1_0_3_RC2/src/native/nt/: Makefile  README
COMMONS_DAEMON_1_0_3_RC2/src/native/nt/lib/: moni_inst.h
COMMONS_DAEMON_1_0_3_RC2/src/native/nt/moni/: vdmoniadm.c
COMMONS_DAEMON_1_0_3_RC2/src/native/nt/procrun/: libprocrun.dsp  libprocrun.vcproj  procrun.dsw  procrun.sln
COMMONS_DAEMON_1_0_3_RC2/src/native/nt/service/: instmain.c
COMMONS_DAEMON_1_0_3_RC2/src/native/nt/signals/: kills.c
COMMONS_DAEMON_1_0_3_RC2/src/native/unix/: Makefile.in
COMMONS_DAEMON_1_0_3_RC2/src/native/unix/man/: jsvc.1.xml
COMMONS_DAEMON_1_0_3_RC2/src/native/unix/native/: arguments.c  debug.c  dso-dlfcn.c  java.c  jsvc-unix.c  locks.c  version.h
COMMONS_DAEMON_1_0_3_RC2/src/samples/: AloneService.java  README.txt  ServiceDaemon.sh  SimpleDaemon.java  build.xml
COMMONS_DAEMON_1_0_3_RC2/src/site/xdoc/: index.xml  procrun.xml
src/assembly/: bin.xml  native-src.xml  src.xml  win.xml
src/changes/: changes.xml
src/docs/: daemon.css  daemon.html
src/main/assembly/: bin.xml  src.xml  win.xml
src/media/: commons-logo-component-100.xcf  commons-logo-component.xcf  logo.xcf
src/native/nt/: Makefile  README
src/native/nt/executables/vdmoniadm/: resource.h  vdmoniadm.dsp  vdmoniadm.dsw  vdmoniadm.rc
src/native/nt/executables/vdmonisvc/: resource.h  vdmonisvc.dsp  vdmonisvc.dsw  vdmonisvc.rc
src/native/nt/lib/: moni_inst.h
src/native/nt/moni/: Makefile  vdmoniadm.c  vdmonisvc.c
src/native/nt/procrun/: License.rtf  Makefile  README.dev  extend.h  libprocrun.amd64  libprocrun.dsp  libprocrun.ia64  libprocrun.vcproj  libprocrun.x86  procgui.c  procrun.c  procrun.dev  procrun.dsp  procrun.dsw  procrun.h  procrun.rc  procrun.sln  procrun.vcproj  procrund.dev  procrunw.dev  readme.txt
src/native/nt/procrun/include/: Makefile.inc  apxwin.h  cmdline.h  console.h  gui.h  handles.h  javajni.h  log.h  registry.h  rprocess.h  service.h
src/native/nt/procrun/java/: Test.java
src/native/nt/procrun/resources/: license.rtf
src/native/nt/procrun/samples/: cchild.c  cchild.vcproj
src/native/nt/procrun/src/: cmdline.c  console.c  gui.c  handles.c  javajni.c  log.c  mclib.c  mclib.h  private.h  registry.c  rprocess.c  service.c  utils.c
src/native/nt/procrun/testchild/: testchild.c  testchild.dsp  testchild.vcproj
src/native/nt/procrun/xdocs/: index.xml
src/native/nt/service/: Makefile  instmain.c  instsvc.dsp  instsvc.dsw
src/native/nt/signals/: kills.c
src/native/nt/supcalls_nt/: vdenv.c
src/native/unix/: .cvsignore  .gitignore  CHANGES.txt  INSTALL.txt  Makedefs.in  Makefile.in  configure  configure.ac  configure.in
src/native/unix/man/: README.txt  fetch.sh  jsvc.1.xml
src/native/unix/native/: .cvsignore  .gitignore  .indent.pro  Makefile.in  Tomcat.sh  Tomcat5.sh  arguments.c  arguments.h  debug.c  debug.h  dso-dlfcn.c  dso-dyld.c  dso.h  help.c  help.h  home.c  home.h  java.c  java.h  jsvc-unix.c  jsvc.h  location.c  location.h  locks.c  locks.h  replace.c  replace.h  signals.c  signals.h  version.h
src/native/unix/support/: apfunctions.m4  apjava.m4  apsupport.m4  buildconf.sh  config.guess  config.sub  install.sh  mkdist.sh
src/native/windows/: README  README.dev  README.txt
src/native/windows/apps/prunmgr/: .gitignore  Makefile  prunmgr.c  prunmgr.h  prunmgr.manifest  prunmgr.rc
src/native/windows/apps/prunsrv/: .gitignore  Makefile  prunsrv.c  prunsrv.h  prunsrv.manifest  prunsrv.rc  test.bat
src/native/windows/include/: Makefile.inc  apxwin.h  cmdline.h  console.h  gui.h  handles.h  javajni.h  log.h  registry.h  rprocess.h  security.h  service.h
src/native/windows/procrun/include/: console.h  service.h
src/native/windows/procrun/src/: cmdline.c  console.c
src/native/windows/resources/: license.rtf
src/native/windows/src/: cmdline.c  console.c  gui.c  handles.c  javajni.c  log.c  mclib.c  mclib.h  private.h  registry.c  rprocess.c  security.c  service.c  utils.c
src/native/windows/xdocs/: index.xml
src/samples/: AloneDaemon.sh  AloneService.java  Native.c  Native.sh  ProcrunService.cmd  ProcrunService.java  ProcrunServiceInstall.cmd  ProcrunServiceRemove.cmd  README.txt  ServiceDaemon.java  ServiceDaemon.sh  ServiceDaemonReadThread.java  SimpleApplication.java  SimpleApplication.sh  SimpleDaemon.java  SimpleDaemon.sh  Tomcat5.sh  Tomcat7.sh  build.xml
src/site/: site.xml
src/site/xdoc/: binaries.xml  download_daemon.xml  faq.xml  index.xml  issue-tracking.xml  jsvc.xml  mail-lists.xml  procrun.xml
trunk/: RELEASE-NOTES.txt  build.properties.sample  build.xml  pom.xml
trunk/src/native/unix/: CHANGES.txt  configure.in
trunk/src/native/unix/man/: fetch.sh
trunk/src/native/unix/native/: .indent.pro  arguments.c  debug.c  help.c  help.h  home.c  java.c  jsvc-unix.c  locks.c  signals.h  version.h
trunk/src/native/unix/support/: apfunctions.m4
trunk/src/native/windows/: README  README.dev
trunk/src/native/windows/resources/: license.rtf
trunk/src/native/windows/src/: gui.c  javajni.c  log.c  mclib.c  mclib.h  private.h  registry.c  utils.c
trunk/src/samples/: AloneService.java  ProcrunServiceInstall.cmd  SimpleApplication.java  SimpleApplication.sh  Tomcat7.sh  build.xml
trunk/src/site/xdoc/: binaries.xml  download_daemon.xml  faq.xml  issue-tracking.xml  mail-lists.xml  procrun.xml
xdocs/: binaries.xml  cvs-usage.xml  download_daemon.xml  faq.xml  index.xml  issue-tracking.xml  jsvc.xml  navigation.xml  procrun.xml
(+92 files in other folders)
